<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">

    <TextView
        android:id="@+id/nome_receita"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:text="@string/nome_receita"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/foto_receita"
        app:layout_constraintTop_toTopOf="@+id/foto_receita" />

    <ImageView
        android:id="@+id/foto_receita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/categoria"
        android:layout_width="250dp"
        android:layout_height="21dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:text="@string/categoria"
        app:layout_constraintEnd_toEndOf="@+id/nome_receita"
        app:layout_constraintStart_toStartOf="@+id/nome_receita"
        app:layout_constraintTop_toBottomOf="@+id/nome_receita" />

    <TextView
        android:id="@+id/tv_tempo_preparo"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/tempoPreparo"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/tv_rendimento"
        app:layout_constraintStart_toStartOf="@+id/nome_receita"
        app:layout_constraintTop_toBottomOf="@+id/categoria" />

    <TextView
        android:id="@+id/tv_rendimento"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/rendimento"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/nome_receita"
        app:layout_constraintTop_toBottomOf="@+id/categoria" />

    <TextView
        android:id="@+id/tempo_preparo"
        android:layout_width="74dp"
        android:layout_height="34dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/tempo"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tv_tempo_preparo"
        app:layout_constraintStart_toStartOf="@+id/tv_tempo_preparo"
        app:layout_constraintTop_toBottomOf="@+id/tv_tempo_preparo" />

    <TextView
        android:id="@+id/rendimento"
        android:layout_width="74dp"
        android:layout_height="34dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/porcoes"
        app:layout_constraintEnd_toEndOf="@+id/tv_rendimento"
        app:layout_constraintStart_toStartOf="@+id/tv_rendimento"
        app:layout_constraintTop_toBottomOf="@+id/tv_rendimento" />
</androidx.constraintlayout.widget.ConstraintLayout>